Add models/, Start pipeline creation

--- a/notebooks/handling_classified_posts.ipynb
+++ b/notebooks/handling_classified_posts.ipynb
@@ -898,16 +898,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
-    "posts.to_csv('../data/final_data.csv', index=False)"
+    "posts.to_csv('../data/final_data.csv.gz', compression='gzip', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -974,13 +974,13 @@
        "4  Реконструкция пропускного пункта \"Верхний Ларс...               Технологии"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.read_csv('../data/final_data.csv').head()"
+    "pd.read_csv('../data/final_data.csv.gz', compression='gzip').head()"
    ]
   }
  ],
